--- a/sass/04layout/_article.scss
+++ b/sass/04layout/_article.scss
@@ -264,29 +264,28 @@ Page layout for articles on Start Here
 /**********************
   Infographic style
   ***********************/
-// #infographic-mobile {
-//   max-width: 90%;
-//   & figure img {
-//     box-shadow: none;
-//   }
-//   @include responsive(tab) {
-//     display: none;
-//   }
-// }
+#infographic-mobile {
+  max-width: 90%;
+  & figure img {
+    box-shadow: none;
+  }
+  @include responsive(tab) {
+    display: none;
+  }
+}
 
-// #infographic-desktop {
-//   display: none;
-//   @include responsive(tab) {
-//     display: block;
-//     width: 100%;
-//     & figure img {
-//       box-shadow: none;
-//     }
-//   }
-//   @include responsive(sm-desktop) {
-//     width: 90%;
-//   }
-// }
+#infographic-desktop {
+  display: none;
+  @include responsive(tab) {
+    display: block;
+    width: 50%;
+    overflow: hidden;
+    transition: transform 0.3s ease-in-out;
+    &:hover {
+      transform: scale(1.3);
+    }
+  }
+}
 
 #panview {
   @include responsive(sm-desktop) {
