--- a/sass/04layout/_header.scss
+++ b/sass/04layout/_header.scss
@@ -96,81 +96,7 @@ header {
   }
 }
 
-// Different background images for different pages
-.header__background-img-7Reasons {
-  background-image: url("../img/header-background5.jpg");
-  background-size: cover;
-  background-position: bottom;
-}
-
-.header__background-img-4Methods {
-  background-image: url("../img/header-background8.jpg");
-  background-size: cover;
-  background-position: top;
-}
-
-.header__background-img-guided-tours {
-  background-image: url("../img/header-background2.jpg");
-  background-size: cover;
-  background-position: 55% 35%;
-}
-
-.header__background-img-start-here {
-  background-image: url("../img/header-background6.jpg");
-  background-size: cover;
-  background-position: 90%;
-}
-
-.header__background-img-about {
-  background-image: url("../img/header-background7.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.header__background-img-15Things {
-  background-image: url("../img/header-15things.jpg");
-  background-size: cover;
-  background-position: right 45% bottom;
-}
-
-.header__background-img-blog {
-  background-image: url("../img/header-blog.jpg");
-  background-size: cover;
-  background-position: left center;
-}
-
-.header__background-img-teapot {
-  background-image: url("../img/blog/01-Mt-Teapot/000-Teapot-cover-2.jpg");
-  background-size: cover;
-  background-position: center; //left bottom;
-}
-
-.header__background-img-keelung {
-  background-image: url("../img/blog/02-Mt-Keelung/00-header-keelung.jpg");
-  background-size: cover;
-  background-position: center; //left bottom;
-}
-
-.header__background-img-tefuye {
-  background-image: url("../img/blog/03-tefuye/00-tefuye-header.jpg");
-  background-size: cover;
-  background-position: 40% 20%;
-}
-
-.header__background-img-privacy {
-  background-image: url("../img/ex04.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.header__background-img-terms {
-  background-image: url("../img/header-terms.jpg");
-  background-size: cover;
-  background-position: right center;
-}
-
 // Logo
-
 .logo {
   padding: 1rem 1rem 1rem 1.5rem;
   transition: display 0.3s ease-in-out;
@@ -346,12 +272,11 @@ header {
       font-family: $font-title;
       margin-right: 0;
       background: rgba($color-base-blue, 0.9);
-      width: 100vw;
-      height: 100vh;
-      position: absolute;
-      top: 0;
-      right: 0;
-      display: none;
+      // transition: all 0.3s ease-in-out;
+      position: absolute; // for CSS only hamburger menu
+      top: 0; // for CSS only hamburger menu
+      right: -1rem; // for CSS only hamburger menu
+      display: none; // for CSS only hamburger menu
 
       &-item {
         margin: 1rem auto;
@@ -361,7 +286,7 @@ header {
           display: inline-block;
           margin: 0 auto;
           width: 100%;
-          height: 100%;
+          // height: 100%;
           padding: 2rem 1rem;
           color: $color-white;
 
@@ -382,25 +307,22 @@ header {
       //opacity: 1;
       display: block;
       padding-top: 5rem;
-      width: 100vw;
-      height: 100vh;
+      width: 103vw;
+      height: 103vh;
       margin-top: -3rem;
       margin-right: -1rem;
 
       @include responsive(tab) {
-        //margin-right: 0rem;
         margin-right: -6rem;
-        width: 106vw;
-      }
-      @include responsive(sm-desktop) {
-        // margin-right: -5rem;
-        // width: 104vw;
-      }
-      @include responsive(normal-desktop) {
+        width: 107vw;
       }
     }
   }
 }
+
+// .offcanvas-is-open {
+//   transform: translateX(100vw);
+// }
 
 // fixed navigation after scrolling down
 .fixedNav {
